--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,16 @@
 {
     "name": "cftp/aggregator",
     "description": "Synchronise posts between blogs in a multisite network",
-    "license": "GPLv2",
+    "type": "wordpress-plugin",
+    "license": "GPL-2.0+",
     "authors": [
         {
             "name": "Code For The People",
             "homepage": "http://codeforthepeople.com"
         }
     ],
-    "minimum-stability": "stable",
+    "require": {
+        "composer/installers" : "~1.0"
+    },
+    "minimum-stability": "stable"
 }
