--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,11 @@
     "require": {
         "composer/installers" : "~1.0"
     },
-    "minimum-stability": "stable"
+    "require-dev": {
+        "behat/behat" : "2.4.*@stable"
+    },
+    "minimum-stability": "stable",
+    "config": {
+        "bin-dir": "bin/"
+    }
 }
