--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
         "composer/installers" : "~1.0"
     },
     "require-dev": {
-        "behat/behat" : "2.4.*@stable"
+        "behat/behat": "2.4.*@stable",
+        "behat/mink": "1.4.*@stable",
+        "behat/mink-extension": "*",
+        "behat/mink-goutte-driver": "*",
+        "behat/mink-selenium2-driver": "*"
     },
     "minimum-stability": "stable",
     "config": {
